# bus-sign

./: .env.example  .gitattributes  Cargo.nix  README.md  devenv.nix  flake.nix
.github/workflows/: backend-ci.yml
backend/: Cargo.nix  Cargo.toml
backend/src/: main.rs
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: BusTimeEntry.svelte
